--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,10 +1,10 @@
 // Color Palette - Primary Colors
 
-$CAP_PRIMARY: #47af46;
+$CAP_PR01: #47af46;
 
 // Color Palette - Secondary Colors
 
-$CAP_SEC: #2466ea;
+$CAP_SC01: #2466ea;
 
 // Color Palette - Custom Colors
 $CAP_ORANGE: #f87d23;
@@ -25,7 +25,6 @@ $CAP_G07: #dfe2e7;
 $CAP_G08: #ebecf0;
 $CAP_G09: #f4f5f7;
 $CAP_G10: #fafbfc;
-
 
 // Fonts
 
