--- a/scripts/generators/documentation/importInSwitcher.js.hbs
+++ b/scripts/generators/documentation/importInSwitcher.js.hbs
@@ -1,2 +1,2 @@
-import {{properCase name}}Info from '../{{properCase name}}Info/{{properCase name}}Info';
+import {{properCase name}}Doc from '../src/{{properCase name}}Doc';
 //imported for docs
