--- a/scripts/generators/documentation/switcher.js.hbs
+++ b/scripts/generators/documentation/switcher.js.hbs
@@ -1,3 +1,3 @@
       case '{{camelCase name}}':
-        return <{{properCase name}}Info />;
+        return <{{properCase name}}Doc />;
       //components for docs
