--- a/scripts/generators/component/es6.pure.js.hbs
+++ b/scripts/generators/component/es6.pure.js.hbs
@@ -5,6 +5,7 @@
 */
 
 import React from 'react';
+import './_{{ camelCase name }}.scss'
 // import styled from 'styled-components';
 
 {{#if wantMessages}}
