--- a/components/CapButton/_capButton.scss
+++ b/components/CapButton/_capButton.scss
@@ -1,4 +1,5 @@
 @import "~@capillarytech/cap-style-guide/styles/main";
+@import "../../styles/_variables.scss";
 
 .cap-button{
   height: $CAP_SS_L;
@@ -11,21 +12,21 @@
   min-width: 5rem;
 
   &.ant-btn-primary {
-    background-color: $CAP_PR02;
+    background-color: map-get($CAP_PRIMARY, base);
     color: $CAP_SC07;
     border: none;
 
     &:hover {
-      background-color: $CAP_PR01;
+      background-color: map-get($CAP_PRIMARY, hover);
     }
   }
 
   &.ant-btn-ghost {
-    border-color: $CAP_PR02;
-    color: $CAP_PR02;
+    border-color: map-get($CAP_PRIMARY, base);
+    color: map-get($CAP_PRIMARY, base);
 
     &:hover {
-      background-color: $CAP_PR01;
+      background-color: map-get($CAP_PRIMARY, hover);
       color: $CAP_SC07;
     }
 
