--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -20,6 +20,7 @@ $CAP_BLUE: #23cccc;
 $CAP_PURPLE: #8517e5;
 $CAP_PINK: #e51fa3;
 $CAP_RED: #ea213a;
+$CAP_ICON: #7a869a;
 
 // Color Palette - GREYS
 $CAP_G01: #091e42;
