resolve merge conflicts

--- a/components/CapButton/_capButton.scss
+++ b/components/CapButton/_capButton.scss
@@ -1,4 +1,5 @@
 @import "~@capillarytech/cap-style-guide/styles/main";
+@import "../../styles/_variables.scss";
 
 .cap-button{
   height: $CAP_SS_L;
