--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,7 +10,7 @@ $CAP_PRIMARY: (
 
 $CAP_SECONDARY: (
   base: #2466ea,
-  light: rgba(#2466ea, .1)
+  light: rgba(#2466ea, 0.1)
 );
 
 // Color Palette - Custom Colors
@@ -35,13 +35,9 @@ $CAP_G09: #f4f5f7;
 $CAP_G10: #fafbfc;
 
 // Fonts
-
-$HEADING_FONT: proxima-nova, open-sans, sans-serif !important;
-$BODY_FONT: open-sans, sans-serif !important;
-$HEADING_FONT_COLOR: "rgba(102, 102, 102, 1)";
+$FONT_FAMILY: "Roboto", sans-serif;
 $FONT_WEIGHT_REGULAR: 400;
-$FONT_WEIGHT_SEMIBOLD: 600;
-$FONT_WEIGHT_BOLD: 800;
+$FONT_WEIGHT_MEDIUM: 500;
 
 // Sizes & Spacings (1em converts to 16px on desktop)
 
