--- a/components/NavigationBar/_navigationBar.scss
+++ b/components/NavigationBar/_navigationBar.scss
@@ -7,6 +7,10 @@ $sidebar: cap-sidebar;
 .#{$clsPrefix}-header {
   background-color: #ffffff;
   padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .#{$clsPrefix}-divider {
@@ -23,6 +27,7 @@ $sidebar: cap-sidebar;
   padding: 0px 0px 0px 8px;
   margin-right: 8px;
   height: 48px;
+  border: 1px solid transparent;
   &.open {
     border-radius: 4px;
     border: 1px solid $CAP_G06;
