--- a/scripts/generators/component/exportComponent.js.hbs
+++ b/scripts/generators/component/exportComponent.js.hbs
@@ -1,2 +1,2 @@
-export { default as {{properCase name}} } from './{{properCase name}}'
+export { default as {{properCase name}} } from './{{properCase name}}';
 //exported for library
