--- a/components/CapSideBar/_menuSearch.scss
+++ b/components/CapSideBar/_menuSearch.scss
@@ -59,4 +59,60 @@ $menuSearch: menu-search;
     justify-content: center;
     align-items: center;
   }
+  .links-content {
+    padding: 8px 0 8px 0;
+    font-size: 14px;
+    max-height: 390px;
+    overflow-y: auto;
+    .group-heading {
+      font-size: 12px;
+      color: #707070;
+      margin-bottom: 8px;
+      margin-top: 8px;
+      padding-left: 16px;
+    }
+    .adv-search-message {
+      padding-left: 16px;
+      font-size: 12px;
+      color: #707070;
+      margin-top: 12px;
+    }
+    .group-children {
+      .link-items {
+        padding-left: 32px;
+      }
+    }
+    .link-items {
+      span {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-left: 16px;
+      a {
+        color: #2e89df;
+      }
+      .new-tab-link-wrapper {
+        display: none;
+        height: 32px;
+        width: 38px;
+        align-items: center;
+        justify-content: center;
+      }
+      .new-tab-link-wrapper .material-icons {
+        font-size: 16px;
+      }
+    }
+    .link-items:hover {
+      background-color: #ebebeb;
+      .new-tab-link-wrapper {
+        display: flex;
+        border-left: 1px solid #fff;
+      }
+    }
+  }
 }
